--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./wiki/images:/var/www/html/images
       # After initial setup, download LocalSettings.php to the same directory as
       # this yaml and uncomment the following line and restart
-      #- ./wiki/LocalSettings.php:/var/www/html/LocalSettings.php
+      - ./wiki/LocalSettings.php:/var/www/html/LocalSettings.php
   database:
     image: mariadb
     restart: always
